--- a/public/AI.html
+++ b/public/AI.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="Discover Lotus, Your Free Online Personal AI Therapist - Empowering Mental Well-Being. Experience Compassionate Guidance, Insights, and Support for Life's Challenges. Transform Struggles into Strengths with Lotus AI Therapy Today!" />
+    <meta name="description" content="ATMAN, Your Free Online Personal AI Therapist - Empowering Mental Well-Being. Experience Compassionate Guidance, Insights, and Support for Life's Challenges. Transform Struggles into Strengths with Lotus AI Therapy Today!" />
     <meta property="og:image" content="/splashArt.jpg" />
     <link rel="stylesheet" href="css/AI.css" /> <!-- Ensure the path is correct -->
     <link rel="manifest" href="/manifest.json" />
